2010-02-24  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43150
	* gimplify.c (gimplify_type_sizes): Clear DECL_IGNORED_P for VLA
	bounds even for -O+.
	* var-tracking.c (track_expr_p): If !need_rtl, don't mandate
	expr needs to have DECL_NAME set.

2010-02-24  Nick Clifton  <nickc@redhat.com>

	* config/mep/mep.c: Include gimple.h.
	(mep_function_uses_sp): Delete unused function.
	(mep_gimplify_va_arg_expr): Change types of pre_p and post_p
	parameters.  Use unsigned integers to count args.  Return a
	NULL_RTX instead of an error_mark_node.  Toidy up formatting.

2010-02-23  Jakub Jelinek  <jakub@redhat.com>

	PR target/43107
	* config/i386/i386.c (avx_vpermilp_parallel): Reject indexes
	greater or equal to nelt instead of 2 * nelt.
	(expand_vec_perm_1): When op0 and op1 are equal, mask indexes
	with nelt - 1.

2010-02-23  Jason Merrill  <jason@redhat.com>

	PR debug/42800
	* cfgexpand.c (expand_used_vars): Keep artificial non-ignored vars
	in cfun->local_decls even if they have register types.

	PR c++/42837
	* stor-layout.c (place_field): Don't warn about unnecessary
	DECL_PACKED if the type is packed.

2010-02-23  Jakub Jelinek  <jakub@redhat.com>

	PR target/43139
	* config/i386/i386.c (ix86_delegitimize_address): Delegitimize all
	GOTOFF relocs, even when the base reg isn't pic pointer.

2010-02-23  Michael Matz  <matz@suse.de>

	PR debug/43077
	* cfgexpand (expand_debug_expr): Expand TERed ssa names in place.
	(expand_gimple_basic_block): Generate and use debug temps if there
	are debug uses left after the last real use of TERed ssa names.
	Unlink debug immediate uses when they are expanded.

2010-02-23  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR 43123
	* config/i386/i386.c (override_options): Reorganise to provide
	better error messages.

2010-02-22  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/43083
	* graphite-scop-detection.c (create_single_exit_edge): Move
	the call to find_single_exit_edge to....